tests/parser/fail/v5_fail_slice_missing_both.ep
# COMPILE_FAIL_CONTAINS: slice requires explicit start and end
fun main(): void {
    let s = "hello"
    let x = s[:]
}
